{
    "name": "Mouse",
    "maps": [
        {
            "name": "Mouse",
            "id": "320f0eb5-b98a-423f-b0dd-3807d966fadf",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "c2740efd-6b2e-4f07-aafc-3acffd6b2b09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "e60cf2cc-6c3c-4f80-9f64-e889de2eac1a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1dcf115d-7672-4dfe-adb0-b8b319eaa808",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a85c9ce4-b90f-4ebb-b219-99f756886f32",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}